--- a/index.html
+++ b/index.html
@@ -5,12 +5,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./src/styles/reset.scss" />
     <link rel="stylesheet" href="./dist/main.css" />
-    <script src="./dist/main.js"></script>
-    <title>Project Name</title>
+    <script src="./dist/main.js" defer></script>
+    <title>SharkGPT</title>
   </head>
 
   <body>
+    <div id="container">
+        <canvas id="game-canvas" width=1839 height=1205></canvas>
+        <h1 class="page1">SharkGPT</h1>
+        <h3 class="page1">Pitch your startup idea to our panel of rich & powerful investors. <br> In the other room, there is another startup waiting to pitch to the same VCs. <br> Can you come up with a better idea? <br> The prize at stake: a $10M Series A investment that will launch you on the gloried path to becoming a billion dollar unicorn company. </h3>
+        <button id="consumer" class="page1">Consumer</button>
+        <button id="enterprise" class="page1">Enterprise</button>
+        <h2 id="page2header" class="page2">Pitch us your best <span class="span-category" class="page2" id="span-category"></span> idea and prepare to enter the  <span class="span-category" class="page2">tank</span></h2>
+        <form id="user-pitch">
+            <h2>Your idea goes here</h2>
+            <textarea id="pitch" name="pitch" value="Type your idea here"></textarea>
+            <button type="submit" value="submit">Let's do this</button>
+        </form>
+        <audio class="page3" id="musicPlayer" src="assets/screen3/shark-tank-remix.mp3"></audio>
+        <button class="page3" id="playButton">
+          <i class="fas fa-play"></i>
+          <i class="fas fa-pause"></i>
+        </button>
+        <div class="page3" id="loading-circle"></div>
+        <h1 class="page3">Your Pitch</h1>
+        <h2 class="page3">The sharks are debating...</h1>
+        <textarea class="page3" id="submitted-pitch" placeholder="Enter text"></textarea>
+        <textarea class="page4" id="elon-answer" placeholder="Enter text"></textarea>
+        <textarea class="page4" id="beyonce-answer" placeholder="Enter text"></textarea>
+        <textarea class="page4" id="warren-answer" placeholder="Enter text"></textarea>
+        <textarea class="page4" id="mark-answer" placeholder="Enter text"></textarea>
+        <textarea class="page4" id="serena-answer" placeholder="Enter text"></textarea>
+        <h1 id="congrats-heading">Congrats! Your startup wins the $10M investment!</h1>
+        <h1 id="sorry-heading">Sorry, the other startup won the $10M investment</h1>
+
+    </div>
   </body>
 
 </html>
